= natour Changelog

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog^], and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning^].

IMPORTANT: As per Semantic Versioning, the major version zero is for initial development and anything may change at any time.

== Unreleased

== 0.11.0 - 2023-04-15

=== Changed

- Specify files to load for a configuration instead of a file and directories.
- The configuration files must now be named `.natour.yml` (prefixed with a dot).

=== Fixed

- Do not abort creating reports if GPX files do not contain tracks.

== 0.10.0 - 2023-02-18

=== Fixed

- Prevent orphaned section titles and table captions in PDF output.

== 0.9.0 - 2022-10-08

=== Added

- Support colors for GPS tracks, waypoints and routes (`natour map create` command only).

=== Changed

- Omit empty columns of species lists in AsciiDoc output.

=== Fixed

- Fix inconsistent handling of file errors in the command line interface.
- Fix the creation of map images.

== 0.8.0 - 2022-04-22

=== Added

- Add command to create map images from GPS tracks, waypoints and routes.
- Add command line option to display the version of this gem.

=== Changed

- Rename arguments of `Natour::MapGeoAdmin.save_image`, i.e. `tracks` to `gps_files`, `layers` to `map_layers` and `size` to `image_size`.
- Improve the error reporting on the command line interface in case of file errors.
- Rework the configuration; the structure and naming follows the command line interface and the keys are of type Ruby Symbol. For details, see the README file.
- Rework the command line interface. Use `natour --help` to get more information.
- Change `backend` and `draft_backend` arguments of `Natour::convert_report` to symbols.
- Rename `Natour::create` to `Natour::create_reports` and `Natour::convert` to `Natour::convert_report`.

=== Fixed
