@@ -106,6 +106,7 @@ The configuration is built by loading https://yaml.org/[YAML^] files in hierarch
     :map: true
     :map_layers: []
     :adoc_author: null
+    :short_species_names: false
   :convert:
     :out_dir: null
     :out_file: null
