@@ -8,6 +8,10 @@ IMPORTANT: As per Semantic Versioning, the major version zero is for initial dev
 
 == Unreleased
 
+=== Added
+
+- Add command line option to use short species names in the AsciiDoc output. The species names are truncated by removing the authority (botany only).
+
 == 0.11.0 - 2023-04-15
 
 === Changed
